Styling on readings page, added a parse date function in toolbox file

--- a/src/index.css
+++ b/src/index.css
@@ -948,10 +948,20 @@ code {
   width: 100%;
 }
 
+.profile-spread-card-container {
+  display: inline-block;
+  margin-right: 5%;
+  margin-left: 1%;
+  width: 650px;
+}
+
 .profile-notes-container {
   border: white solid 2px;
   border-radius: 5px;
-  max-height: 300px;
+  display: inline-block;
+  height: 300px;
+  margin-bottom: 40px;
+  min-width: 650px;
   overflow-x: hidden;
   overflow-y: auto;
   width: 50%;
