--- a/src/index.css
+++ b/src/index.css
@@ -842,6 +842,19 @@ code {
   text-align: center;
 }
 
+.user-signup-login-error {
+  background: #ff9999;
+  border-radius: 5px;
+  height: 2em;
+  left: 25%;
+  padding-top: 0.5em;
+  padding-bottom: 1em;
+  position: fixed;
+  top: 50%;
+  transition: top 1s;
+  width: 50%;
+}
+
 /* ---------- */
 
 /* Navbar --------------------------------------- Navbar */
@@ -949,6 +962,7 @@ code {
 }
 
 .profile-spread-card-container {
+  text-align: center;
   display: inline-block;
   margin-right: 10%;
   margin-left: 1%;
