--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 /* Fonts Reference */
 /* font-family: 'Satisfy', cursive; */
 /* font-family: 'Josefin Sans', sans-serif; */
+/* font-family: 'Noto Sans', sans-serif; */
 
 body {
   backface-visibility: hidden;
   background-image: linear-gradient(#008080, #00b386);
   color: white;
+  font-family: 'Noto Sans', sans-serif;
   margin: 0;
   min-height: 100vh;
   overflow-x: hidden;
@@ -248,8 +250,26 @@ code {
 }
 
 .card-description-reversal {
+  cursor:default;
   margin: 5%;
   width: 90%;
+}
+.card-description-reversal p {
+  cursor: pointer;
+}
+
+.card-description-reversal p:hover {
+  opacity: 0.7;
+}
+
+.card-description-reversal textarea {
+  background: none;
+  border: solid white 2px;
+  border-radius: 3px;
+  color: white;
+  font-size: 1em;
+  height: 10em;
+  width: 80%;
 }
 
 .card-illustration {
