Work on refining login page

--- a/src/index.css
+++ b/src/index.css
@@ -1036,12 +1036,11 @@ code {
   width: 80%;
 }
 
-.profile-note-form-button {
+.form-button {
   background: rgba(0,0,0,0);
   border: solid white 2px;
   border-radius: 3px;
   color: white;
-
 }
 
 .profile-note-delete {
