--- a/src/index.css
+++ b/src/index.css
@@ -758,7 +758,10 @@ code {
   min-height: 500px;
   min-width: 400px;
   left: 20%;
+  overflow-y: auto;
+  padding: 1em;
   position: fixed;
+  text-align: center;
   top: 10%;
   width: 60%;
 }
@@ -767,6 +770,7 @@ code {
   background: none;
   border: solid black 2px;
   border-radius: 3px;
+  cursor: pointer;
   margin: 3px;
 }
 
