--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,18 @@ header h1 {
   font-family: 'Josefin Sans', sans-serif;
 }
 
+@media only screen and (max-width: 960px) {
+  .large-screen-only {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 540px) {
+  .small-screen-remove {
+    display: none;
+  }
+}
+
 .header-symbols-left {
   bottom: 5px;
   filter: invert(1);
@@ -945,6 +957,15 @@ code {
   width: 100%;
 }
 
+.navbar-accordion {
+  display: none;
+}
+
+
+.navbar-accordion-expanded {
+
+}
+
 @media only screen and (max-width: 630px) and (min-width: 540px) {
   .navbar {
     font-size: 0.8em;
@@ -954,6 +975,10 @@ code {
 @media only screen and (max-width: 540px) {
   .navbar {
     display: none;
+  }
+
+  .navbar-accordion {
+    display: inline-block;
   }
 }
 
