--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,24 @@ body img {
   backface-visibility: hidden;
 }
 
+/* Media size rules ------------------------------------- Media size rules */
+
+/* For only large screens */
+
+@media only screen and (max-width: 1100px) {
+  .large-screen-only {
+    display: none;
+  }
+}
+
+/* Removes elements on small screens */
+
+@media only screen and (max-width: 540px) {
+  .small-screen-remove {
+    display: none;
+  }
+}
+
 /* Header ----------------------------------------------- Header */
 
 header {
@@ -41,15 +59,9 @@ header h1 {
   font-family: 'Josefin Sans', sans-serif;
 }
 
-@media only screen and (max-width: 960px) {
-  .large-screen-only {
-    display: none;
-  }
-}
-
 @media only screen and (max-width: 540px) {
-  .small-screen-remove {
-    display: none;
+  header h1 {
+    font-size: 1em;
   }
 }
 
@@ -247,6 +259,27 @@ code {
   top: 5vh;
   width: 72vh;
   z-index: 100;
+}
+
+@media only screen and (max-width: 640px) {
+  .card-component-inspect {
+    animation: none;
+    width: 250px;
+    height: 300px;
+    left: 5%;
+  }
+
+  p.card-name-inspect {
+    font-size: 1em;
+  }
+
+  .card-component-inspect p {
+    font-size: 0.8em;
+  }
+
+  div.card-component-inspect-inner {
+    width: 80%;
+  }
 }
 
 @keyframes card-inspect-appear {
