Split up CSS files, like I should've at the beginning :/

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
 /* font-family: 'Josefin Sans', sans-serif; */
 /* font-family: 'Noto Sans', sans-serif; */
 
+/* Unclear on what 'code' does, I'll leave it in just for kicks :P */
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  monospace;
+}
+
 body {
   backface-visibility: hidden;
   background-image: linear-gradient(#008080, #00b386);
@@ -40,89 +46,9 @@ body img {
   }
 }
 
-/* Header ----------------------------------------------- Header */
+/* Media size rules ------------------------------------- Media size rules */
 
-header {
-  height: 75px;
-  position: relative;
-  text-align: center;
-  z-index: -1;
-}
 
-header h1 {
-  border-top: 3px solid white;
-  text-decoration: underline;
-  display: inline-block;
-  padding-top: 0.2em;
-  padding-left: 2em;
-  padding-right: 2em;
-  font-family: 'Josefin Sans', sans-serif;
-}
-
-@media only screen and (max-width: 540px) {
-  header h1 {
-    font-size: 1em;
-  }
-}
-
-.header-symbols-left {
-  bottom: 5px;
-  filter: invert(1);
-  height: 75%;
-  left: 35%;
-  position: absolute;
-}
-
-.header-symbols-right {
-  backface-visibility: visible;
-  bottom: 5px;
-  filter: invert(1);
-  height: 75%;
-  position: absolute;
-  right: 35%;
-  transform: rotateY(180deg);
-}
-
-.header-corner {
-  backface-visibility: visible;
-  filter: invert(1);
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-
-/* --------------- */
-
-/* Footer ------------------------------------- Footer */
-
-footer {
-  bottom: 0;
-  height: 3em;
-  left: 0;
-  position: fixed;
-  width: 100%;
-  z-index: -1;
-}
-
-footer p {
-  margin-left: 2em;
-}
-
-footer img {
-  backface-visibility: visible;
-  filter: invert(1);
-  height: 200%;
-  opacity: 0.4;
-  position: absolute;
-  bottom: 5%;
-}
-
-/* -------------- */
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
 
 /* Card Index -------------------------------------- Card Index */
 
@@ -375,22 +301,6 @@ code {
   cursor: pointer;
   border: 2px #002133 solid;
   border-left: none;
-}
-
-.card-tab-exit {
-
-}
-
-.card-tab-description {
-
-}
-
-.card-tab-illustration {
-
-}
-
-.card-tab-reversal {
-
 }
 
 .card-animation {
@@ -791,51 +701,6 @@ code {
 
 /* ---------- */
 
-/* Help --------------------------------------------- Help */
-
-.help-background-screen {
-  background: rgba(0,0,0,0.4);
-  height: 100vh;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100vw;
-}
-
-.help-container {
-  animation: help-container 1s;
-  background: #ccffff;
-  border: solid black 2px;
-  border-radius: 7px;
-  color: black;
-  height: 60%;
-  min-height: 500px;
-  min-width: 400px;
-  left: 20%;
-  overflow-y: auto;
-  padding: 1em;
-  position: fixed;
-  text-align: center;
-  top: 10%;
-  width: 60%;
-  z-index: 2;
-}
-
-.help-container button {
-  background: none;
-  border: solid black 2px;
-  border-radius: 3px;
-  cursor: pointer;
-  margin: 3px;
-}
-
-@keyframes help-container {
-  from {left: -100%;}
-  to {left: 20%;}
-}
-
-/* ---------- */
-
 /* Loading --------------------------------------------- Loading */
 
 .loading-container {
@@ -859,320 +724,6 @@ code {
   left: -50px;
   position: relative;
   width: 100px;
-}
-
-/* ---------- */
-
-/* Lesson --------------------------------------------- Lesson */
-
-.lesson-buttons {
-  text-align: center;
-  width: 100%;
-}
-
-.lesson-buttons p {
-  border: solid white 2px;
-  border-radius: 5px;
-  cursor: pointer;
-  display: inline-block;
-  padding: 1em;
-}
-
-.lesson-container {
-  background: black;
-  border: 2px white solid;
-  border-radius: 5px;
-  left: 10vw;
-  min-height: 60vh;
-  position: absolute;
-  text-align: center;
-  width: 80vw;
-  z-index: 100;
-}
-
-.lesson-container p {
-  margin: 1em;
-}
-
-.lesson-exit-button {
-  background: black;
-  border: solid white 10px;
-  border-radius: 100%;
-  color: white;
-  cursor: pointer;
-  height: 20px;
-  position: absolute;
-  right: -1em;
-  top: -1em;
-  width: 20px;
-}
-
-.lesson-form-text {
-  background: rgba(0,0,0,0);
-  border: dashed white 1px;
-  color: white;
-  margin: 1em 0 1em 0;
-  width: 100%;
-  height: 5em;
-}
-
-.lesson-image {
-  display: inline-block;
-  float: left;
-  height: 420px;
-  margin-top: 1em;
-  margin-left: 2%;
-  width: 280px;
-}
-
-.lesson-next-button {
-  cursor: pointer;
-  bottom: 1em;
-  left: 0;
-  position: absolute;
-}
-
-.lesson-next-button:hover {
-  color: grey;
-}
-
-.lesson-submit-button {
-  color: white;
-  background: black;
-  border: white solid 1px;
-}
-
-.lesson-text {
-  display: inline-block;
-  float: left;
-  margin-top: 2%;
-  margin-left: 2%;
-  min-height: 395px;
-  min-width: 300px;
-  text-align: left;
-  width: 60%;
-}
-
-/* ---------- */
-
-/* Login & Signup ------------------------------- Login & Signup */
-
-.user-signup-login-container {
-  text-align: center;
-}
-
-.user-signup-login-error {
-  background: #ff9999;
-  border-radius: 5px;
-  height: 2em;
-  left: 25%;
-  padding-top: 0.5em;
-  padding-bottom: 1em;
-  position: fixed;
-  top: 50%;
-  transition: top 1s;
-  width: 50%;
-}
-
-/* ---------- */
-
-/* Navbar --------------------------------------- Navbar */
-
-.navbar {
-  border: solid black 2px;
-  border-left: none;
-  border-right: none;
-  display: inline-block;
-  font-family: 'Josefin Sans', sans-serif;
-  height: 2em;
-  padding-top: 0.5em;
-  transition: font-size 0.2s;
-  width: 100%;
-}
-
-.navbar-accordion {
-  display: none;
-}
-
-
-.navbar-accordion-expanded {
-
-}
-
-@media only screen and (max-width: 630px) and (min-width: 540px) {
-  .navbar {
-    font-size: 0.8em;
-  }
-}
-
-@media only screen and (max-width: 540px) {
-  .navbar {
-    display: none;
-  }
-
-  .navbar-accordion {
-    display: inline-block;
-  }
-}
-
-.navbar-left {
-  text-align: left;
-  display: inline-block;
-  float: left;
-  width: 80%
-}
-
-.navbar a {
-  color: white;
-  margin-right: 1em;
-  margin-left: 5px;
-}
-
-.navbar-right {
-  text-align: right;
-  display: inline-block;
-  float: left;
-  width: 19%
-}
-
-/* ---------- */
-
-/* Onboarding Components ----------------------------- Onboarding Components */
-
-.onboard-popup {
-  animation: onboard-popup-appear 1s;
-  background: #ccffff;
-  border: black solid 2px;
-  border-radius: 5px;
-  color: black;
-  left: 25%;
-  top: 25%;
-  padding: 1em;
-  position: fixed;
-  text-align: center;
-  -webkit-transition: left 1s;
-  transition: left 1s;
-  width: 50%;
-  z-index: 1000;
-}
-
-.onboard-popup p {
-  cursor: default;
-}
-
-@keyframes onboard-popup-appear {
-  from { left: -75% }
-  to { left: 25% }
-}
-
-.onboard-popup-exit {
-  background: #ccffff;
-  border: black solid 2px;
-  border-radius: 100%;
-  cursor: pointer;
-  height: 1.5em;
-  position: absolute;
-  right: -2em;
-  top: -1em;
-  width: 1.5em;
-}
-
-.onboard-popup-exit:hover {
-  color: red;
-}
-
-.onboard-background {
-  bottom: 0;
-  left: 0;
-  opacity: 0.8;
-  position: absolute;
-  transform: rotate(-15deg);
-  width: 10%;
-}
-
-/* ---------- */
-
-/* Profile Components ------------------------------------- Profile Components */
-
-.profile-info-container {
-  box-sizing: border-box;
-  float: left;
-  margin-right: 2.2%;
-  min-width: 300px;
-  padding: 1em;
-  width: 100%;
-}
-
-.profile-spread-index {
-  float: left;
-  min-width: 650px;
-  padding: 5px;
-  text-align: center;
-  width: 100%;
-}
-
-.profile-spread-card-container {
-  text-align: center;
-  display: inline-block;
-  margin-right: 5%;
-  margin-left: 1%;
-  max-width: 650px;
-  min-width: 240px;
-}
-
-.profile-notes-container {
-  border: white solid 2px;
-  border-radius: 5px;
-  display: inline-block;
-  height: 300px;
-  margin-left: 5%;
-  margin-bottom: 40px;
-  min-width: 400px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  width: 40%;
-}
-
-.profile-note {
-  background: black;
-  border-radius: 5px;
-  margin: 5px;
-  padding: 0.3em 0.5em 0.3em 0.5em;
-}
-
-.profile-note-create {
-  background: white;
-  border-radius: 5px;
-  cursor: pointer;
-  filter: invert(1);
-  margin: 5px;
-  width: 4em;
-}
-
-.profile-note-form {
-  text-align: center;
-  margin: 0.5em;
-  width: 100%;
-}
-
-.profile-note-form textarea {
-  background: rgba(125,125,125,0.3);
-  border: solid white 2px;
-  border-radius: 5px;
-  color: white;
-  width: 80%;
-}
-
-.form-button {
-  background: rgba(0,0,0,0);
-  border: solid white 2px;
-  border-radius: 3px;
-  color: white;
-  margin: 10px;
-}
-
-.profile-note-delete {
-
 }
 
 /* ---------- */
