Tweaks to navbar

--- a/src/css/_Navbar.scss
+++ b/src/css/_Navbar.scss
@@ -10,15 +10,22 @@
   padding-top: 0.5em;
   transition: font-size 0.2s;
   width: 100%;
+
+  a {
+    color: white;
+    margin-right: 1em;
+    margin-left: 5px;
+  }
+
+  div {
+    float: left;
+    display: inline-block;
+  }
+
 }
 
 .navbar-accordion {
   display: none;
-}
-
-
-.navbar-accordion-expanded {
-
 }
 
 @media only screen and (max-width: 630px) and (min-width: 540px) {
@@ -39,20 +46,10 @@
 
 .navbar-left {
   text-align: left;
-  display: inline-block;
-  float: left;
   width: 80%
-}
-
-.navbar a {
-  color: white;
-  margin-right: 1em;
-  margin-left: 5px;
 }
 
 .navbar-right {
   text-align: right;
-  display: inline-block;
-  float: left;
   width: 19%
 }
