--- a/src/css/index.css
+++ b/src/css/index.css
@@ -948,6 +948,13 @@ header h1 {
   padding-top: 0.5em;
   transition: font-size 0.2s;
   width: 100%; }
+  .navbar a {
+    color: white;
+    margin-right: 1em;
+    margin-left: 5px; }
+  .navbar div {
+    float: left;
+    display: inline-block; }
 
 .navbar-accordion {
   display: none; }
@@ -964,19 +971,10 @@ header h1 {
 
 .navbar-left {
   text-align: left;
-  display: inline-block;
-  float: left;
   width: 80%; }
-
-.navbar a {
-  color: white;
-  margin-right: 1em;
-  margin-left: 5px; }
 
 .navbar-right {
   text-align: right;
-  display: inline-block;
-  float: left;
   width: 19%; }
 
 /* Onboarding Components ----------------------------- Onboarding Components */
