--- a/src/css/_Animations.scss
+++ b/src/css/_Animations.scss
@@ -1,10 +1,16 @@
 /* Illustration Animations ------------------------ Illustration Animations */
 
+@mixin transform($property) {
+  -webkit-transform: $property;
+  -ms-transform: $property;
+  transform: $property;
+}
+
 /* 0 Fool */
 
 @keyframes fool-sway {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(15deg); }
+  from { @include transform(rotate(0deg)); }
+  to { @include transform(rotate(15deg)); }
 }
 
 .fool-sway {
@@ -15,8 +21,8 @@
 /* 1 Magician */
 
 @keyframes m-rotate {
-  from { transform: rotate(0deg) }
-  to { transform: rotate(360deg) }
+  from { @include transform(rotate(0deg)) }
+  to { @include transform(rotate(360deg)) }
 }
 
 .magician-rotator-container {
@@ -76,8 +82,8 @@
 }
 
 @keyframes empress-snow {
-  from { filter: hue-rotate(0deg); top: -10%; transform: rotate(0deg); visibility: visible; }
-  to { filter: hue-rotate(-180deg); top: 110%; transform: rotate(360deg); visibility: visible; }
+  from { filter: hue-rotate(0deg); top: -10%; @include transform(rotate(0deg)); visibility: visible; }
+  to { filter: hue-rotate(-180deg); top: 110%; @include transform(rotate(360deg)); visibility: visible; }
 }
 
 .empress-snow {
@@ -150,13 +156,13 @@
 /* 7 Chariot */
 
 @keyframes chariot-wheel {
-  0% { transform: rotate(0deg); background-color: #cccc00 }
-  16.7% { transform: rotate(120deg); background-color: #009933 }
-  33.3% { transform: rotate(240deg); background-color: #006699 }
-  50% { transform: rotate(360deg); background-color: #3333ff }
-  66.7% { transform: rotate(480deg); background-color: #cc00cc }
-  83.3% { transform: rotate(600deg); background-color: #cc0000 }
-  100% { transform: rotate(720deg); background-color: #cc9900 }
+  0% { @include transform(rotate(0deg)); background-color: #cccc00 }
+  16.7% { @include transform(rotate(120deg)); background-color: #009933 }
+  33.3% { @include transform(rotate(240deg)); background-color: #006699 }
+  50% { @include transform(rotate(360deg)); background-color: #3333ff }
+  66.7% { @include transform(rotate(480deg)); background-color: #cc00cc }
+  83.3% { @include transform(rotate(600deg)); background-color: #cc0000 }
+  100% { @include transform(rotate(720deg)); background-color: #cc9900 }
 }
 
 .chariot-wheel {
@@ -178,8 +184,8 @@
 }
 
 @keyframes wheel-rotate {
-  from { transform: rotate(0deg); }
-  from { transform: rotate(360deg); }
+  from { @include transform(rotate(0deg)); }
+  from { @include transform(rotate(360deg)); }
 }
 
 .wheel-inner {
@@ -282,15 +288,15 @@
 /* 15 Devil */
 
 @keyframes devil-eye {
-  0% { transform: rotateY(0deg); left: 17%; top: 30%}
-  10% { transform: rotateY(23deg); left: 25%; top: 31%}
-  20% { transform: rotateY(23deg); left: 25%; top: 31%}
-  30% { transform: rotateY(0deg); left: 17%; top: 30%}
-  40% { transform: rotateY(0deg); left: 17%; top: 30%;}
-  50% { transform: rotateY(-17deg); left: 10%; top: 30.5%;}
-  60% { transform: rotateY(-17deg); left: 10%; top: 30.5%;}
-  70% { transform: rotateY(0deg); left: 17%; top: 30%;}
-  100% { transform: rotateY(0deg); left: 17%;}
+  0% { @include transform(rotateY(0deg)); left: 17%; top: 30%}
+  10% { @include transform(rotateY(23deg)); left: 25%; top: 31%}
+  20% { @include transform(rotateY(23deg)); left: 25%; top: 31%}
+  30% { @include transform(rotateY(0deg)); left: 17%; top: 30%}
+  40% { @include transform(rotateY(0deg)); left: 17%; top: 30%;}
+  50% { @include transform(rotateY(-17deg)); left: 10%; top: 30.5%;}
+  60% { @include transform(rotateY(-17deg)); left: 10%; top: 30.5%;}
+  70% { @include transform(rotateY(0deg)); left: 17%; top: 30%;}
+  100% { @include transform(rotateY(0deg)); left: 17%;}
 }
 
 /* 16 Tower */
@@ -324,8 +330,8 @@
 /* 19 Sun */
 
 @keyframes sun-sway {
-  from { transform: rotate(0); left: 0; }
-  to { transform: rotate(10deg); left: 10%; }
+  from { @include transform(rotate(0)); left: 0; }
+  to { @include transform(rotate(10deg)); left: 10%; }
 }
 
 .sun-sway {
@@ -343,7 +349,7 @@
   animation: sun-seeds 8s infinite linear;
   left: 15%;
   position: absolute;
-  transform: rotate(45deg);
+  @include transform(rotate(45deg));
   top: 5%;
   width: 50%;
 }
@@ -351,8 +357,8 @@
 /* General Animations */
 
 @keyframes rotate {
-  from { transform: rotate(0deg)}
-  to { transform: rotate(360deg)}
+  from { @include transform(rotate(0deg))}
+  to { @include transform(rotate(360deg))}
 }
 
 .animation-rotate-medium {
